--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title> Lazybone9988's hideout </title>
-	</head>
-	<body>
-		<nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<head>
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+      <title> Anthony Lim's Homepage </title>
+</head>
+
+<body>
+<p>
+<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
@@ -12,18 +15,20 @@
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
-		<div class="container">
+
+
+</p>
+<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm xxxx! </h1>
-				<p>I'm ..... Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Anthony Lim! </h1>
+				<p>I'm ..... <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+</body>
 		<footer>
     		<ul>
-        		<li><a href="mailto:xxxx@gmail.com">email</a></li>
-        		<li><a href="https://github.com/xxxx">github.com/xxxx</a></li>
+        		<li><a href="mailto:anthonylimhc@gmail.com">email</a></li>
+        		<li><a href="https://4nth0nyl1mhc.github.io/">https://4nth0nyl1mhc.github.io/</a></li>
 			</ul>
 		</footer>
-	</body>
 </html>
-
