--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </p>
 <div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Anthony Lim! </h1>
+        		<h1>Hello there, I'm Anthony Lim! </h1>
 				<p>I'm ..... <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
