--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="container">
     		<div class="blurb">
         		<h1>Hello there, I'm Anthony Lim! </h1>
-				<p>I'm ..... <a href="/about">Read more about my life...</a></p>
+				<p>I'm ..... <a href="/about">Read more about me...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 </body>
